--- a/index.html
+++ b/index.html
@@ -1,37 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flappy Bird Clone</title>
-    <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/buzz/1.2.0/buzz.min.js"></script>
-    <script src="main.js" defer></script> <!-- Link to your JS file -->
-</head>
-<body>
-    <div id="flyarea">
-        <div id="player"></div>
-        <div id="land"></div>
-        <div id="scoreboard" style="display: none;">
-            <div id="bigscore"></div>
-            <div id="currentscore"></div>
-            <div id="highscore"></div>
-            <button id="replay">Replay</button>
-            <div id="medal"></div>
-        </div>
-        <!-- Placeholder for pipes; will be added dynamically -->
-    </div>
-    <div id="splash">
-        <h1>Welcome to Flappy Bird!</h1>
-        <button id="start">Start Game</button>
-    </div>
-    <script>
-        $(document).ready(function() {
-            $("#start").click(function() {
-                startGame();
-            });
-        });
-    </script>
-</body>
-</html>
+   <head>
+      <title>Floppy Bird</title>
+      <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+      <meta name="author" content="Nebez Briefkani" />
+      <meta name="description" content="play floppy bird. a remake of popular game flappy bird built in html/css/js" />
+      <meta name="keywords" content="flappybird,flappy,bird,floppybird,floppy,html,html5,css,css3,js,javascript,jquery,github,nebez,briefkani,nebezb,open,source,opensource" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+
+      <!-- Open Graph tags -->
+      <meta property="og:title" content="Floppy Bird" />
+      <meta property="og:description" content="play floppy bird. a remake of popular game flappy bird built in html/css/js" />
+      <meta property="og:type" content="website" />
+      <meta property="og:image" content="https://nebezb.com/floppybird/assets/thumb.png" />
+      <meta property="og:url" content="https://nebezb.com/floppybird/" />
+      <meta property="og:site_name" content="Floppy Bird" />
+
+      <!-- Style sheets -->
+      <link href="css/reset.css" rel="stylesheet">
+      <link href="css/main.css" rel="stylesheet">
+   </head>
+   <body>
+      <div id="gamecontainer">
+         <div id="gamescreen">
+            <div id="sky" class="animated">
+               <div id="flyarea">
+                  <div id="ceiling" class="animated"></div>
+                  <!-- This is the flying and pipe area container -->
+                  <div id="player" class="bird animated"></div>
+
+                  <div id="bigscore"></div>
+
+                  <div id="splash"></div>
+
+                  <div id="scoreboard">
+                     <div id="medal"></div>
+                     <div id="currentscore"></div>
+                     <div id="highscore"></div>
+                     <div id="replay"><img src="assets/replay.png" alt="replay"></div>
+                  </div>
+
+                  <!-- Pipes go here! -->
+               </div>
+            </div>
+            <div id="land" class="animated"><div id="debug"></div></div>
+         </div>
+      </div>
+      <!-- Removed the footer credits -->
+      <!-- 
+      <div id="footer">
+         <a href="https://www.dotgears.com/">original game/concept/art by dong nguyen</a>
+         <a href="https://nebezb.com/">recreated by nebez briefkani</a>
+         <a href="https://github.com/nebez/floppybird/">view github project</a>
+      </div>
+      -->
+      <div class="boundingbox" id="playerbox"></div>
+      <div class="boundingbox" id="pipebox"></div>
+
+      <script src="js/jquery.min.js"></script>
+      <script src="js/jquery.transit.min.js"></script>
+      <script src="js/buzz.min.js"></script>
+      <script src="js/main.js"></script>
+
+      <script>
+      function inIframe() {
+          try {
+              return window.self !== window.top;
+          } catch (e) {
+              return true;
+          }
+      }
+      if (!inIframe() && window.location.hostname == 'nebezb.com') {
+         window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+         ga('create', 'UA-48047334-1', 'auto');
+         ga('send', 'pageview');
+      }
+      </script>
+      <script async src='https://www.google-analytics.com/analytics.js'></script>
