--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
         </div>
 
         <!-- Score Displays -->
-        <div id="scoreboard" style="position: absolute; top: 20px; left: 20px;">
+        <div id="scoreboard" style="position: absolute; top: 20px; left: 20px; display: none;">
             <div id="bigscore"></div>
             <div id="currentscore"></div>
             <div id="highscore"></div>
+            <div id="medal"></div>
         </div>
     </div>
 </body>
