--- a/index.html
+++ b/index.html
@@ -1,44 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Game Title</title>
-    <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/buzz/1.0.0/buzz.min.js"></script>
-    <script src="main.js" defer></script> <!-- Link to your JS file -->
+    <title>Floppy Bird</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="author" content="Nebez Briefkani" />
+    <meta name="description" content="play floppy bird. a remake of popular game flappy bird built in html/css/js" />
+    <meta name="keywords" content="flappybird,flappy,bird,floppybird,floppy,html,html5,css,css3,js,javascript,jquery,github,nebez,briefkani,nebezb,open,source,opensource" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+
+    <meta property="og:title" content="Floppy Bird" />
+    <meta property="og:description" content="play floppy bird. a remake of popular game flappy bird built in html/css/js" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://nebezb.com/floppybird/assets/thumb.png" />
+    <meta property="og:url" content="https://nebezb.com/floppybird/" />
+    <meta property="og:site_name" content="Floppy Bird" />
+
+    <link href="css/reset.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-    <div id="game-container" style="position: relative; overflow: hidden; height: 100vh;">
-        <div id="flyarea" style="position: absolute; bottom: 0; width: 100%; height: 100%;">
-            <div id="player" class="animated" style="position: absolute; left: 50px; top: 180px;">
-                <img src="assets/player.png" alt="Player" />
+    <div id="gamecontainer">
+        <div id="gamescreen">
+            <div id="sky" class="animated">
+                <div id="flyarea">
+                    <div id="ceiling" class="animated"></div>
+                    <div id="player" class="bird animated"></div>
+
+                    <div id="bigscore"></div>
+
+                    <div id="splash"></div>
+
+                    <div id="scoreboard">
+                        <div id="medal"></div>
+                        <div id="currentscore"></div>
+                        <div id="highscore"></div>
+                        <div id="replay"><img src="assets/replay.png" alt="replay"></div>
+                    </div>
+
+                    </div>
             </div>
-            <!-- Pipes will be dynamically added here -->
-        </div>
-
-        <!-- Ground -->
-        <div id="land" style="position: absolute; bottom: 0; width: 100%; height: 40px; background-color: green;"></div>
-
-        <!-- Splash Screen -->
-        <div id="splash" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(255, 255, 255, 0.8); opacity: 1;">
-            <h1>Your Game Title</h1>
-            <button id="start">Start</button>
-        </div>
-
-        <!-- Replay Button -->
-        <div id="replay" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); opacity: 0;">
-            <button>Replay</button>
-        </div>
-
-        <!-- Score Displays -->
-        <div id="scoreboard" style="position: absolute; top: 20px; left: 20px; display: none;">
-            <div id="bigscore"></div>
-            <div id="currentscore"></div>
-            <div id="highscore"></div>
-            <div id="medal"></div>
+            <div id="land" class="animated"><div id="debug"></div></div>
         </div>
     </div>
+    <div class="boundingbox" id="playerbox"></div>
+    <div class="boundingbox" id="pipebox"></div>
+
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.transit.min.js"></script>
+    <script src="js/buzz.min.js"></script>
+    <script src="js/main.js"></script>
+
+    <script>
+    function inIframe() {
+        try {
+            return window.self !== window.top;
+        } catch (e) {
+            return true;
+        }
+    }
+    if (!inIframe() && window.location.hostname == 'nebezb.com') {
+        window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+        ga('create', 'UA-48047334-1', 'auto');
+        ga('send', 'pageview');
+    }
+    </script>
+    <script async src='https://www.google-analytics.com/analytics.js'></script>
 </body>
 </html>
