--- a/index.html
+++ b/index.html
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <title>Floppy Bird</title>
+      <title>Flappy Bird</title>
       <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-      <meta name="author" content="Nebez Briefkani" />
-      <meta name="description" content="play floppy bird. a remake of popular game flappy bird built in html/css/js" />
-      <meta name="keywords" content="flappybird,flappy,bird,floppybird,floppy,html,html5,css,css3,js,javascript,jquery,github,nebez,briefkani,nebezb,open,source,opensource" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 
       <!-- Open Graph tags -->
-      <meta property="og:title" content="Floppy Bird" />
-      <meta property="og:description" content="play floppy bird. a remake of popular game flappy bird built in html/css/js" />
+      <meta property="og:title" content="Flappy Bird" />
       <meta property="og:type" content="website" />
-      <meta property="og:image" content="https://nebezb.com/floppybird/assets/thumb.png" />
-      <meta property="og:url" content="https://nebezb.com/floppybird/" />
-      <meta property="og:site_name" content="Floppy Bird" />
 
       <!-- Style sheets -->
       <link href="css/reset.css" rel="stylesheet">
@@ -70,12 +63,11 @@
               return true;
           }
       }
-      if (!inIframe() && window.location.hostname == 'nebezb.com') {
+      if (!inIframe() && window.location.hostname == '') {
          window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
          ga('create', 'UA-48047334-1', 'auto');
          ga('send', 'pageview');
       }
       </script>
-      <script async src='https://www.google-analytics.com/analytics.js'></script>
    </body>
 </html>
