--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <title>Flappy Bird</title>
+      <title>Ataris Flappy Bird</title>
       <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+      <meta name="viewport" content="width=device-width, initial-scale=2.0, maximum-scale=2.0, user-scalable=0" />
 
       <!-- Open Graph tags -->
       <meta property="og:title" content="Flappy Bird" />
