--- a/index.html
+++ b/index.html
@@ -1,73 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <title>Ataris Flappy Bird</title>
-      <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=2.0, maximum-scale=2.0, user-scalable=0" />
+<head>
+    <title>Ataris Flappy Bird</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-      <!-- Open Graph tags -->
-      <meta property="og:title" content="Flappy Bird" />
-      <meta property="og:type" content="website" />
+    <!-- Open Graph tags -->
+    <meta property="og:title" content="Flappy Bird" />
+    <meta property="og:type" content="website" />
 
-      <!-- Style sheets -->
-      <link href="css/reset.css" rel="stylesheet">
-      <link href="css/main.css" rel="stylesheet">
-   </head>
-   <body>
-      <div id="gamecontainer">
-         <div id="gamescreen">
+    <!-- Style sheets -->
+    <link href="css/reset.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden; /* Prevent scrolling */
+        }
+
+        #gamecontainer {
+            width: 100vw;    /* Full viewport width */
+            height: 100vh;   /* Full viewport height */
+            overflow: hidden; /* Prevent scrolling */
+            position: relative; /* Positioning context for children */
+            transform: scale(2); /* Scale the game up by 2x */
+            transform-origin: top left; /* Keep the origin at the top left */
+        }
+
+        #gamescreen {
+            width: 100%; /* Full width to accommodate scaling */
+            height: 100%; /* Full height to accommodate scaling */
+        }
+    </style>
+</head>
+<body>
+    <div id="gamecontainer">
+        <div id="gamescreen">
             <div id="sky" class="animated">
-               <div id="flyarea">
-                  <div id="ceiling" class="animated"></div>
-                  <!-- This is the flying and pipe area container -->
-                  <div id="player" class="bird animated"></div>
-
-                  <div id="bigscore"></div>
-
-                  <div id="splash"></div>
-
-                  <div id="scoreboard">
-                     <div id="medal"></div>
-                     <div id="currentscore"></div>
-                     <div id="highscore"></div>
-                     <div id="replay"><img src="assets/replay.png" alt="replay"></div>
-                  </div>
-
-                  <!-- Pipes go here! -->
-               </div>
+                <div id="flyarea">
+                    <div id="ceiling" class="animated"></div>
+                    <div id="player" class="bird animated"></div>
+                    <div id="bigscore"></div>
+                    <div id="splash"></div>
+                    <div id="scoreboard">
+                        <div id="medal"></div>
+                        <div id="currentscore"></div>
+                        <div id="highscore"></div>
+                        <div id="replay"><img src="assets/replay.png" alt="replay"></div>
+                    </div>
+                </div>
             </div>
             <div id="land" class="animated"><div id="debug"></div></div>
-         </div>
-      </div>
-      <!-- Removed the footer credits -->
-      <!-- 
-      <div id="footer">
-         <a href="https://www.dotgears.com/">original game/concept/art by dong nguyen</a>
-         <a href="https://nebezb.com/">recreated by nebez briefkani</a>
-         <a href="https://github.com/nebez/floppybird/">view github project</a>
-      </div>
-      -->
-      <div class="boundingbox" id="playerbox"></div>
-      <div class="boundingbox" id="pipebox"></div>
+        </div>
+    </div>
+    <div class="boundingbox" id="playerbox"></div>
+    <div class="boundingbox" id="pipebox"></div>
 
-      <script src="js/jquery.min.js"></script>
-      <script src="js/jquery.transit.min.js"></script>
-      <script src="js/buzz.min.js"></script>
-      <script src="js/main.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.transit.min.js"></script>
+    <script src="js/buzz.min.js"></script>
+    <script src="js/main.js"></script>
 
-      <script>
-      function inIframe() {
-          try {
-              return window.self !== window.top;
-          } catch (e) {
-              return true;
-          }
-      }
-      if (!inIframe() && window.location.hostname == '') {
-         window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-         ga('create', 'UA-48047334-1', 'auto');
-         ga('send', 'pageview');
-      }
-      </script>
-   </body>
+    <script>
+    function inIframe() {
+        try {
+            return window.self !== window.top;
+        } catch (e) {
+            return true;
+        }
+    }
+    if (!inIframe() && window.location.hostname == '') {
+        window.ga = window.ga || function() { (ga.q = ga.q || []).push(arguments) }; ga.l = +new Date;
+        ga('create', 'UA-48047334-1', 'auto');
+        ga('send', 'pageview');
+    }
+    </script>
+</body>
 </html>
