--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             height: 100vh;   /* Full viewport height */
             overflow: hidden; /* Prevent scrolling */
             position: relative; /* Positioning context for children */
-            transform: scale(2); /* Scale the game up by 2x */
+            transform: scale(2) translateY(30%); /* Scale the game up by 2x and move down by 30% */
             transform-origin: top left; /* Keep the origin at the top left */
         }
 
